[package]

name = "ChannelConfig"
version = "0.0.1"
authors = ["Tracy Ma <1991md@gmail.com>"]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston/"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod.git"
